startapp accounts and fix base template

--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -1,35 +1,52 @@
-<html>
+<html lang="en">
+  
     <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>To-Do lists</title>
-      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link href="/static/base.css" rel="stylesheet">
     </head>
   
     <body>
-        <div class="container">
-          <div class="row">
-              <div class="col-md-6 col-md-offset-3 jumbotron">
-                <div class="text-center">
-                    <h1>{% block header_text %}{% endblock %}</h1>
-                    <form method="POST" action="{% block form_action %}{% endblock %}">
-                      {{ form.text }}
-                      {% csrf_token %}
-                      {% if form.errors %}  
-                        <div class="form-group has-error">
-                          <div class="help-block">{{ form.text.errors }}</div>  
-                        </div>
-                      {% endif %}
-                    </form>
-                </div>
-             </div>
+      <div class="container">
+  
+        <nav class="navbar navbar-default" role="navigation">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="/">Superlists</a>
+            <form class="navbar-form navbar-right" method="POST" action="#">
+              <span>Enter email to log in:</span>
+              <input class="form-control" name="email" type="text" />
+              {% csrf_token %}
+            </form>
           </div>
-    
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-              {% block table %}
-              {% endblock %}
+        </nav>
+  
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 jumbotron">
+            <div class="text-center">
+              <h1>{% block header_text %}{% endblock %}</h1>
+              <form method="POST" action="{% block form_action %}{% endblock %}">
+                {{ form.text }}
+                {% csrf_token %}
+                {% if form.errors %}
+                  <div class="form-group has-error">
+                    <div class="help-block">{{ form.text.errors }}</div>
+                  </div>
+                {% endif %}
+              </form>
             </div>
           </div>
-    
         </div>
-      </body>
+  
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3">
+            {% block table %}
+            {% endblock %}
+          </div>
+  </div>
+  
+      </div>
+    </body>
   </html>  
